make compatible for java 11